--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ p.emoji {
 	border-bottom-color: white;
 	border-top: 0;
 	border-right: 0;
-	/*margin-left: -10px;
-	margin-bottom: -20px;*/
+	margin-left: -10px;
+	margin-bottom: -10px;
 }
 /****************************
 */
