--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ p {
 p.emoji {
 	font-size: 2rem;
 }
+h4 {
+	font-weight: normal;
+	font-size: .8rem;
+	color: ivory;
+	margin: 0;
+}
 #title-block {
 	position: fixed;
 	overflow: hidden;
@@ -36,8 +42,8 @@ p.emoji {
 	position: relative;
 	display: inline-block;
 	width: 70%;
-	height: 100%;
-	max-width: 700px;
+/*	height: 100%;
+*/	max-width: 700px;
 }
 .photo {
 	width: 100%;
@@ -126,9 +132,98 @@ p.emoji {
 	border-radius: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#fistBtn:hover {
+#fistBtn:hover, #firstBtn:active {
 		box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.2), 2px 7px 21px 2px rgba(0, 0, 0, 0.19);
 }
 h2#fistBtn  {
 	line-height: 6.25rem;
+}
+footer {
+	background-color: #333;
+	height: 1.5rem;
+	padding-top: .5rem;
+}
+/*mobile devices*/
+@media only screen 
+    and (max-device-width: 640px) {
+    	h1 {
+    		font-size: 6rem;
+    	}
+    	.frame {
+    		width: 90%;
+    		max-width: none;
+    	}
+    	.canvas {
+    		margin-top: 15rem;
+    		min-width: 0;
+    		width: 100%;
+    	}
+    	#fistBtn {
+    		height: 12rem;
+    		width: 12rem;
+    	}
+    	h2 {
+    		font-size: 8rem;
+    	}
+    	h2#fistBtn  {
+			line-height: 12rem;
+		}
+		p {
+			font-size: 2.5rem;
+		}
+		
+		#joke-bubble.speechBbl {
+			width: 17rem;
+			left: 85%;
+		}
+
+		#joke-bubble.speechBbl.long {
+			top: 5%;
+			left: 85%;
+		}
+		#reaction-bubble.speechBbl {
+			width: 15rem;
+			left: 15%;
+		}	
+		p.emoji {
+			font-size: 4rem;
+		}
+}
+
+@media only screen 
+    and (max-device-width: 1000px)
+    and (orientation : landscape ) {
+    	.canvas {
+    		margin-top: 0;
+    	}
+    	#title-block {
+    		position: static;
+    		padding-top: 0;
+    		margin: 0;
+    	}
+    	h1 {
+    		font-size: 3rem;
+    		margin-bottom: 1rem;
+    	}
+    	p {
+    		font-size: 1.5rem;
+    	}
+    	#joke-bubble.speechBbl {
+			width: 19rem;
+			left: 88%;
+		}
+		#joke-bubble.speechBbl.long {
+			top: 5%;
+			left: 88%;
+			width: 19rem;
+		}
+		#reaction-bubble.speechBbl {
+			width: 17rem;
+			left: 9%;
+		}	
+    	#fistBtn {
+    		position: fixed;
+    		top: 2rem;
+    		left: 5rem;
+    	}
 }
