--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ h4 {
 	color: ivory;
 	margin: 0;
 }
+a {
+	color: white;
+	text-decoration: none;
+}
 #title-block {
 	position: fixed;
 	overflow: hidden;
@@ -128,6 +132,7 @@ h4 {
 	top: -5rem;
 	width: 6rem;
 	height: 6rem;
+	margin-bottom: -2rem;
 	cursor: pointer;
 	border-radius: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -187,6 +192,14 @@ footer {
 		}	
 		p.emoji {
 			font-size: 4rem;
+		}
+		footer {
+			height: 4rem;
+			margin-top: 66rem;
+			padding: 1rem;
+		}
+		h4 {
+			font-size: 2rem;
 		}
 }
 
